change hero block

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                 </div>
             </section>
             <section class="functions">
-                <div class="container">
+                <div class="container functions__container">
                     <h2 class="functions__title section__title">Des fonctionnalités de vente pour développer vos revenus
                     </h2>
                     <p class="function__descr">Découvrez nos nombreuses fonctionnalités pour monétiser vos produits,
